Fix sistersearch dropping below main search
In some widths  the sister search results drop down below the
main search results, when there is still room for them next to
them. This is basically because while 60% + 30% + 8% < 100%, so
it should all fit, there is a 1.5em left margin on #bodyContent ul.
This mucks with the percentages, so to clear things up (in a bit
of a hacky manner) take that 1.5em back off the right side of the
search results.  Since the sister search has a margin of its own
there should be no overlap.

--- a/resources/src/mediawiki.special/mediawiki.special.search.interwikiwidget.styles.less
+++ b/resources/src/mediawiki.special/mediawiki.special.search.interwikiwidget.styles.less
@@ -117,5 +117,12 @@
 			clear: left;
 			max-width: 60%;
 		}
+		.mw-search-results-has-iw #mw-interwiki-results {
+			margin-right: -1.5em;
+		}
+		#bodyContent ul {
+			word-wrap: break-word;
+		}
 	}
+
 }
